// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide selectAll if there is only one item 1`] = `
<div
  className="Checklist"
>
  <div
    className="itemsList"
  >
    <ForwardRef(LabeledInput)
      checked={true}
      key="id1"
      label="name 1"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`should match snapshot 1`] = `
<div
  className="Checklist"
>
  <ForwardRef(LabeledInput)
    checked={false}
    label="Select All"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="itemsList"
  >
    <ForwardRef(LabeledInput)
      checked={true}
      key="id1"
      label="name 1"
      onChange={[Function]}
      type="checkbox"
    />
    <ForwardRef(LabeledInput)
      checked={false}
      key="id2"
      label="name 2"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;
